--- a/CONFIG
+++ b/CONFIG
@@ -82,7 +82,7 @@ BOOST = -lboost_thread-mt $(MY_BOOST)
 else
 BOOST = -lboost_thread $(MY_BOOST)
 endif
-
+MY_CFLAFS = -DINSECURE
 CFLAGS += $(ARCH) $(MY_CFLAGS) $(GDEBUG) -Wextra -Wall $(OPTIM) -I$(ROOT) -pthread $(PROF) $(DEBUG) $(MOD) $(GF2N_LONG) $(PREP_DIR) $(SECURE) -std=c++11 -Werror
 CPPFLAGS = $(CFLAGS)
 LD = $(CXX)
