--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 # Offline data, runtime logs #
 ##############################
-Player-Data
-Player-Data/*
+#Player-Data
+#Player-Data/*
 Prep-Data/*
 logs/*
 Language-Definition/main.pdf
 keys/*
 
+#Possible player-data files #
+#############################
+Player-Data/*.pem
+Player-Data/*.key
+Player-Data/*.0
 # Personal CONFIG file #
 ##############################
 CONFIG.mine
